--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="newUserLogin4">Új vagy itt? Regisztrálj!</string>
     <string name="emailAddress">Email cím</string>
     <string name="name">Név</string>
+    <string name="codojo">Codojo</string>
+    <string name="szalagcim">Feketeöves a kódolásban!</string>
+    <string name="regiSzalagcim">Regisztráció</string>
 </resources>
