Kvíz oldal view-ja kész

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,8 @@
     <string name="pwd1">Jelszó</string>
     <string name="pwd2">jelszó</string>
     <string name="change">Megváltoztat</string>
+    <string name="chose">Kérlek válassz egy kurzust</string>
+    <string name="choose">Kérlek, válassz egy kurzust!</string>
+    <string name="courseJava">Java</string>
+    <string name="CSharpC">C#</string>
 </resources>
