--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,4 +176,6 @@
     <string name="TV_63">A metódusokat más kódrészletekből (pl.: a Main-ből) lehet meghívni a metódus nevének és a megfelelő argumentumok megadásával. Például:</string>
     <string name="overload">Túlterhelés (overloading):</string>
     <string name="TV_64">A Java támogatja a metódus túlterhelését, ami azt jelenti, hogy ugyanazt a metódusnevet több változatban is lehet definiálni, amelyek különböznek a paraméterek számától vagy típusától. Például:</string>
+    <string name="methods2">5. kvíz: Metódusok</string>
+    <string name="classesNext">Osztályok</string>
 </resources>
